# Tron.ai

./: .gitignore  README.md  pyproject.toml  requirements.txt  submit.sh  submit_dqn.sh  submit_dqn_phase2_only.sh  submit_dqn_phases.sh
checkpoints/: dqn.pt  dqn_6ch.pt  dqn_7ch.pt  dqn_7ch_masked.pt  dqn_7ch_v2.pt  dqn_9ch.pt  dqn_aggro.pt  dqn_aggro_v2.pt  dqn_rainbow_phase2.pt  ppo.pt  ppo_phase1.pt  ppo_phase2.pt  test.pt
docs/: Resources Used  _config.yml  final.md  index.md  preview_final.html  proposal.md  resources_used.md  status.md  team.md
docs/_layouts/: default.html
docs/assets/: tron.mov
scripts/: eval_dqn.py  eval_ppo.py  generate_plots.py  human_vs_dqn.py  human_vs_ppo.py  play_dqn.py  play_ppo.py  train_dqn.py  train_full_ppo_pipeline.sh  train_ppo.py
tron_ai/: __init__.py
tron_ai/envs/: __init__.py  opponents.py  tron_env.py
tron_ai/rendering/: pygame_viewer.py
tron_ai/rl/: dqn.py  ppo.py
